# ML_polymer_water_interaction

./: .gitignore  HPARAM_SEARCH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Pineline.md  Pipeline.md  QUICK_START.md  README.md  prompt.md  pyproject.toml
Data/: Binary_solubility.csv  Experiment_chi_data.csv
configs/: config.yaml  config_hparam_search.yaml
results/dft_pretrain_20251118_132702/: config.yaml  metrics.csv  summary.json  test_predictions.csv  val_predictions_best.csv
scripts/: run_exp_chi_cv.sh  run_hparam_search.sh  run_hparam_search_cv.sh  run_multitask.sh
src/data/: normalizers.py  splits.py
src/evaluation/: analysis.py  cv_analysis.py  plots.py  polymer_analysis.py  shap_analysis.py  split_visualization.py  uncertainty.py
src/models/: encoder.py  multitask_model.py
src/training/: cv_exp_chi.py  hparam_search_cv_aware.py  hparam_search_transfer_aware.py  losses.py  optuna_utils.py  threshold_optimization.py  train_dft.py  train_multitask.py  train_multitask_quick.py
src/utils/: checkpoint_utils.py  config.py  hparam_tracker.py
transfer_learning_AB_chi/: MF_descriptors.sh  README.md  config.yaml  hyperparameter_optimization.sh  hyperparameter_optimization_direct.sh  transfer_learning.sh
transfer_learning_AB_chi/direct_learning/: README.md  config.yaml  direct_learning.sh  hyperparameter_optimization.sh
transfer_learning_AB_chi/scripts/: model.py  optuna_objective.py  plotting.py  run_transfer_learning.py  test_model.py  (+1 more)
transfer_learning_AB_chi_MF/: README.md  config.yaml  run_direct_learning.sh
transfer_learning_chi/: README.md  config.yaml
transfer_learning_chi_MF/: MF_descriptors.sh  README.md  config.yaml  hyperparameter_optimization.sh  run_direct_learning.sh  transfer_learning.sh
transfer_learning_chi_MFF/: Columns_All.pickle  Corr_All.pickle  MFF_Process.ipynb  MF_descriptors.sh  README.md  config.yaml  polymer.keys_All.pickle  run_direct_learning_optimization.sh  unique_list_All.pickle
transfer_learning_classification/: MF_descriptors.sh  README.md  config.yaml  hyperparameter_optimization.sh  transfer_learning.sh
(+53 files in other folders)
